--- a/ap.services.user/package.json
+++ b/ap.services.user/package.json
@@ -1,7 +1,10 @@
 {
   "name": "ap.services.user",
   "dependencies": {
+    "and": "^0.0.3",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "swagger-ui-express": "^4.6.2",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
