--- a/ap.services.user/package.json
+++ b/ap.services.user/package.json
@@ -1,9 +1,13 @@
 {
   "name": "ap.services.user",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "and": "^0.0.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "swagger-ui": "^4.18.1",
     "swagger-ui-express": "^4.6.2",
     "typescript": "^4.9.5"
   },
