--- a/ap.services.user/tsconfig.json
+++ b/ap.services.user/tsconfig.json
@@ -8,5 +8,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true
   },
-  "exclude": ["./node_modules", "./src/__tests__"]
+  // "exclude": ["./node_modules", "./src/__tests__"]
+  "exclude": ["./node_modules"]
+
 }
