--- a/ap.services.user/tsconfig.json
+++ b/ap.services.user/tsconfig.json
@@ -8,7 +8,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true
   },
-  // "exclude": ["./node_modules", "./src/__tests__"]
-  "exclude": ["./node_modules"]
+  "exclude": ["./node_modules", "./src/__tests__"]
+  // "exclude": ["./node_modules"]
 
 }
