--- a/ap.services.user/tsconfig.json
+++ b/ap.services.user/tsconfig.json
@@ -6,9 +6,9 @@
     "rootDir": "./src",
     "strict": true,
     "moduleResolution": "node",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
+  "include": ["./src/**/*", "./src/config.json"],
   "exclude": ["./node_modules", "./src/__tests__"]
-  // "exclude": ["./node_modules"]
-
 }
