--- a/ap.services.gateway/Dockerfile
+++ b/ap.services.gateway/Dockerfile
@@ -7,20 +7,13 @@ WORKDIR /usr/src/app
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
 COPY package*.json ./
-COPY tsconfig.json ./
 
 RUN npm install
 # If you are building your code for production
 # RUN npm ci --omit=dev
 
 # Bundle app source
-COPY ./src ./src
+COPY . .
 
-# Compile TS
-RUN npx tsc
-
-# Bundle app source
-COPY ./dist .
-
-EXPOSE 3000
-CMD [ "node", "./app.js" ]
+EXPOSE 3100
+CMD [ "node", "./server.js" ]
